infra/k3s/admin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findr-admin
  namespace: findr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findr-admin
  template:
    metadata:
      labels:
        app: findr-admin
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: admin
          image: ghcr.io/denisbodurov05/findr-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 500m
              memory: 512Mi
